test/libsolidity/syntaxTests/inlineAssembly/for_expr_invalid_5.sol
contract C {
    function f() public pure {
        assembly {
            for {} mload {} {}
        }
    }
}
// ----
// ParserError 2314: (88-89): Expected '(' but got '{'
